--- a/app/src/main/res/layout/item_list_spot.xml
+++ b/app/src/main/res/layout/item_list_spot.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/border_shadow"
+        android:background="@drawable/border_shadow_white"
         android:orientation="horizontal">
 
         <ImageView
