--- a/app/src/main/res/layout/activity_main_pending.xml
+++ b/app/src/main/res/layout/activity_main_pending.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/border_shadow"
+        android:background="@drawable/border_shadow_white"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/btnPendingReload"
         app:layout_constraintEnd_toEndOf="parent"
