--- a/app/src/main/res/layout/dialog_spot_add_to_cart.xml
+++ b/app/src/main/res/layout/dialog_spot_add_to_cart.xml
@@ -7,7 +7,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    android:background="@drawable/border_shadow"
+    android:background="@drawable/border_shadow_white"
     android:orientation="vertical">
 
     <TextView
