--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -128,7 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@drawable/border_shadow"
+                android:background="@drawable/border_shadow_white"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
