--- a/app/src/main/res/layout/item_list_sports.xml
+++ b/app/src/main/res/layout/item_list_sports.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_margin="10dp"
-        android:background="@drawable/border_shadow"
+        android:background="@drawable/border_shadow_white"
         android:orientation="horizontal">
 
         <ImageView
