--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,10 @@
         <item name="enforceTextAppearance">false</item>
     </style>
 
+    <style name="YSR.RatingBar" parent="android:style/Widget.Material.RatingBar.Small">
+        <item name="android:layout_marginEnd">-15dp</item>
+    </style>
+
 <!--    <style name="YSR.ActionBar">-->
 <!--        <item name="android:background">@color/ysrBlue</item>-->
 <!--    </style>-->
