fully coaching review implemented

--- a/app/src/main/res/layout/fragment_user_profile_coach.xml
+++ b/app/src/main/res/layout/fragment_user_profile_coach.xml
@@ -88,11 +88,23 @@
             android:id="@+id/textView9Coach"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="20dp"
             android:text="Services"
             android:textSize="28sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.086"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userProfileCoachBtnReview" />
+
+        <Button
+            android:id="@+id/userProfileCoachBtnReview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="Review This Coach"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCoach" />
 
