--- a/app/src/main/res/layout/card_user_header.xml
+++ b/app/src/main/res/layout/card_user_header.xml
@@ -13,7 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="216dp"
+        android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="101dp"
         tools:layout_editor_absoluteY="16dp">
 
@@ -40,14 +40,17 @@
 
         <TextView
             android:id="@+id/cardUserHeaderTxtProfileReviewCount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="105dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
+            android:layout_marginBottom="20dp"
             android:text="57 Reviews"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtProfileName"
+            app:layout_constraintStart_toStartOf="@+id/cardUserHeaderRatingBar"
+            app:layout_constraintTop_toBottomOf="@+id/cardUserHeaderTxtProfileName"
             app:layout_constraintVertical_bias="0.0" />
 
         <RatingBar
@@ -66,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtProfileName"
+            app:layout_constraintTop_toBottomOf="@+id/cardUserHeaderTxtProfileName"
             app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
