--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/recyclerSportList" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dashboardRecyclerServiceList"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
