--- a/app/src/main/res/layout/fragment_org_profile.xml
+++ b/app/src/main/res/layout/fragment_org_profile.xml
@@ -58,7 +58,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/includeItemTitleList"
-            tools:listitem="@layout/card_review" />
+            tools:listitem="@layout/card_review_comment" />
 
         <ImageView
             android:id="@+id/orgProfileImgBtnLeaveReview"
